k8s/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: php-app
  template:
    metadata:
      labels:
        app: php-app
    spec:
      imagePullSecrets:
      - name: harbor-credentials
      containers:
      - name: php-apache
        image: harbor.tewe.com.br/library/raspapremio.biz@sha256:a2b4751018eeb64794f0f1e99c7dd973507eaedf8b3116fc20788b826b035341
        ports:
          - containerPort: 80
